# cf_bench

./: .gitignore  .pre-commit-config.yaml  Generation_2_experiments_plan.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_actionable.csv  test_actionable_fixed.csv
analysis/: README.md  __init__.py  all_results.csv  analyze_results.py  cli.py  gen1_fixed.csv  gen2_analysis.py  gen2_summary.csv  gen_1_summary.csv  gen_2_summary.csv  results_summary.csv
analysis/reporter/: __init__.py  config_parser.py  summary.py
analysis/summary_data/: gen_1_summary.csv
analysis/viz/: __init__.py  gen2_plots_bad.py  gen2_plots_by_category.py  gen2_plots_by_threshold.py  gen2_plots_good.py  prepare_plot_data.py
cf_outputs/: DiCE_hltprhb_2026-03-24.csv  DiCE_hltprhc_2026-03-24.csv
cf_outputs/RandomForest_genetic_highthres_2026-04-21/: config_genetic_hltprhc.txt  genetic_annotated_hltprhc.csv
cf_outputs/RandomForest_genetic_prange_highthres_2026-04-29/: config_RandomForest_genetic.txt  model_info.txt
configs/: RF_example.yaml  TFNN_example.yaml  XGB_example.yaml  cfg_hltprhc.yaml  rf_cfcheck.yaml  rf_hltprhc_cfcheck.yaml  tfnn_cfcheck.yaml  tfnn_hltprhc_cfcheck.yaml  xgboost_cfcheck.yaml  xgboost_genetic_sparsity_09.yaml  xgboost_hltprhc_cfcheck.yaml
data/: 02-train_test_split_drop_diabetes.ipynb  03-balancing_traning_data.ipynb  cfcheck.csv  cfcheck_noisy.csv  ess_model_ready_v2_train.csv  eta.csv  ete.csv  full.csv  train_test_split.ipynb  train_test_split_drop_diabetes.ipynb  train_test_split_pre_diabetes_drop.ipynb
dice_examples/: 01-wachter_DiCE.py  02-karimi_scm.py  03-baron_style_casual_explanation.py
docs/: DiCE_proximity_overview.md  DiCE_sparsity_overview.md  Summary_notes_2026_04-16.md  batch_run_usage.md  low_prob_cases_note.md.md  model_adjustment.md
examples/: 01-wachter_DiCE.py  02-karimi_scm.py  03-baron_style_casual_explanation.py
models/: README.md  rf_hltprhb_2026-04-07_info.txt  rf_hltprhc_2026-04-02_info.txt  rf_hltprhc_2026-04-07_info.txt  train_rf.py
notebooks/: 01_rf_tests.ipynb  01_scikit_rf_tests.ipynb  02_scikit_NB_gridsearch_tests.ipynb  full_data_EDA.ipynb  paths.py  rf_training01.txt
scripts/: README.md  add_noise.py  analyze_csv_differences.py  batch_config_runner.py  migrate_annotated_results.py  restore_from_backups.py
(+529 files in other folders)
