[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf_bench"
version = "0.1.0"
description = "tests of counterfactual models in nightingale 'aiwhatif' project"
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Roozhin Heydari", email = "heydari.roozhin@gmail.com"},
    {name = "Jesper Anteryd", email = "jesper.anteryd@proton.me"},
    {name = "Assia Lebot", email = "assialebot2005@gmail.com"},
]
keywords = ["ai", "counterfactuals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dice_ml==0.12",
    "gower==0.1.2",
    "numpy==1.26",
    "pandas>=2.3",
    "python-dotenv>=1.0",
    "scikit-learn==1.8",
    "tensorflow_cpu==2.21.0",
    "xgboost==3.1.2"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3",
    "pytest>=7.4",
    "ipython>=8.14",
    "ipykernel>=6.25",
]

[project.urls]
Repository = "https://github.com/Dyretna/cf_bench"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
